Fix styling spacings and colors
- Fix spacings and colors in overall style
- Add animation to todo item

--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -10,7 +10,7 @@
     .input_field {
         height: 100%;
         width: 100%;
-        padding: .15rem 22% .15rem 1rem;
+        padding: .5rem 22% .5rem 1rem;
         border-radius: .375rem;
         border: .05rem solid var(--app-special-support-color);
         box-shadow: 0 0 .2rem var(--app-general-box-shadow-color);
