--- a/src/layouts/Layouts.module.scss
+++ b/src/layouts/Layouts.module.scss
@@ -15,14 +15,16 @@
     --todo-item-hover-bg-color: rgb(124, 29, 0);
     --todo-item-hover-box-shadow-color: #000000;
     --todo-item-dragging-hover-box-shadow-color: rgb(44, 44, 44);
-    --todo-item-text-color: rgb(0, 128, 0);
+    --todo-item-text-color: rgb(17, 75, 95);
+
+    --todo-item-text-priority-color: rgb(255, 198, 188);
 
     --app-primary-color: rgb(71, 185, 205);
     --app-primary-support-color: rgb(38, 96, 107);
     --app-secondary-color: rgb(255, 149, 57);
-    --app-secondary-support-color: rgb(174, 75, 5);
-    --app-intermediate-color: rgb(255, 165, 0);
-    --app-intermediate-support-color: rgb(255, 85, 0);
+    --app-secondary-support-color: rgb(150, 67, 7);
+    --app-intermediate-color: rgb(255, 207, 119);
+    --app-intermediate-support-color: rgb(208, 97, 17);
     --app-special-color: rgb(255, 222, 173);
     --app-special-support-color: rgb(167, 132, 79);
 
@@ -50,6 +52,8 @@
     --todo-item-hover-box-shadow-color: #000000;
     --todo-item-dragging-hover-box-shadow-color: rgb(44, 44, 44);
     --todo-item-text-color: rgb(0, 128, 0);
+
+    --todo-item-text-priority-color: rgb(255, 90, 35);
 
     --app-primary-color: rgb(77, 199, 221);
     --app-primary-support-color: rgb(54, 146, 162);
@@ -84,6 +88,7 @@
 .navbar_container {
     background-color: var(--app-bg-color);
     width: 100%;
+    //height: 8%;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     padding: .5rem 1rem;
@@ -109,18 +114,19 @@
         }
 
         &>i {
-            font-size: 1.1rem;
+            font-size: 1.075rem;
         }
 
         &>p {
             margin: 0;
-            font-size: 1.25rem;
+            font-size: 1.225rem;
         }
     }
 
     .heading {
         text-transform: uppercase;
-        font-size: 40px;
+        font-size: 2.25rem;
+        letter-spacing: .1rem;
         color: var(--navbar-color);
         z-index: 1;
         text-align: center;
